# StreamHealthGuardian

./: CMakeLists.txt  README.md  buildspec.json
.github/workflows/: build-project.yaml  release-on-tag.yaml
data/locale/: en-US.ini
src/: actions.cpp  actions.hpp  events.cpp  events.hpp  health_dock.cpp  health_dock.hpp  hotkeys.cpp  hotkeys.hpp  logging.hpp  metrics_collector.cpp  metrics_collector.hpp  overlay_source.cpp  overlay_source.hpp  perf.hpp  plugin.cpp  properties.cpp  properties.hpp  rules_engine.cpp  rules_engine.hpp  version.hpp
